Filtering now complete, with dataset generation.

--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filter.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filter.html
@@ -4,4 +4,4 @@
         <button type="button" class="field-filter-remove btn btn-default btn-xs"><i class="fa fa-times"></i></button>
     </div>
 </div>
-<%= defaultName %>
+<%= name %>
