--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -129,6 +129,17 @@
                 max-height: 360px;
                 overflow: scroll;
             }
+
+            .state-inactive {}
+            .state-active {
+                color: #3c763d;
+                background-color: #dff0d8;
+            }
+            .state-disabled {
+                color: #8a6d3b;
+                background-color: #fcf8e3;
+            }
+
         </style>
         <script type="text/javascript"
             data-main="/bundles/accardoutcomes/js/main"
