--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/field.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/field.html
@@ -2,9 +2,14 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <span class="pull-right">
-                <button type="button" class="btn btn-xs btn-primary field-filter-add">
-                    <i class="fa fa-plus"></i>
-                </button>
+                <div class="btn-toolbar" role="toolbar" aria-label="Field actions">
+                    <button type="button" class="btn btn-xs btn-primary field-filter-add">
+                        <i class="fa fa-plus"></i>
+                    </button>
+                    <button type="button" class="btn btn-xs btn-default field-remove">
+                        <i class="fa fa-times"></i>
+                    </button>
+                </div>
             </span>
             <h3 class="panel-title"><%= name %></h3>
         </div>
