Renamed transformations to translations.

--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filters.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filters.html
@@ -12,7 +12,7 @@
         <a href="#" id="preview-base-dataset" class="btn btn-primary btn-block">
             <i class="fa fa-arrow-circle-o-right"></i> Preview Dataset
         </a>
-        <a href="#transformations" id="filters-button-next" class="btn btn-primary btn-block">
+        <a href="#translations" id="filters-button-next" class="btn btn-primary btn-block">
             <i class="fa fa-arrow-circle-o-right"></i> Next Step 
         </a>
     </div>
