--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/header.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/header.html
@@ -12,7 +12,7 @@
         <ul class="nav nav-pills nav-justified">
             <li role="presentation"><a href="#target" data-route="target" onclick="return false">1. Target</a></li>
             <li role="presentation"><a href="#filters" data-route="filters" onclick="return false">2. Filters</a></li>
-            <li role="presentation"><a href="#transformations" data-route="transformations" onclick="return false">3. Transformations</a></li>
+            <li role="presentation"><a href="#translations" data-route="translations" onclick="return false">3. Translations</a></li>
             <li role="presentation"><a href="#export" data-route="export" onclick="return false">4. Export</a></li>
         </ul>
     </div>
