--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -159,7 +159,7 @@
                     <div id="content">
                         <div id="targets-container" class="section-container"></div>
                         <div id="filters-container" class="section-container"></div>
-                        <div id="transformations-container" class="section-container"></div>
+                        <div id="translations-container" class="section-container"></div>
                         <div id="export-container" class="section-container"></div>
                         <div class="clearfix"></div>
                     </div>
