--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/translations.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/translations.html
@@ -1,13 +1,13 @@
 
-<div id="transformations-header" class="row">
+<div id="translations-header" class="row">
     <div class="col-sm-10">
         <h2>
-            <i id="transformations-icon" class="fa fa-share-alt"></i>
-            Step 3: <small id="transformations-description">Transform your data</small>
+            <i id="translations-icon" class="fa fa-share-alt"></i>
+            Step 3: <small id="translations-description">Translate your data</small>
         </h2>
     </div>
     <hr class="visible-xs">
-    <div id="transformations-next" class="col-sm-2">
+    <div id="translations-next" class="col-sm-2">
         <div class="section-padding hidden-xs"></div>
         <a href="#export" id="transformations-button-next" class="btn btn-primary btn-block">
             <i class="fa fa-arrow-circle-o-right"></i> Next Step 
@@ -17,5 +17,5 @@
 <hr>
 <div class="row">
 
-<div id="transformations" class="transformations"></div>
+<div id="translations" class="translations"></div>
 <div class="clearfix"></div>
