--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -140,6 +140,20 @@
                 background-color: #fcf8e3;
             }
 
+            input.translation-key {
+                background: transparent;
+                border: 0;
+                outline: 0;
+            }
+
+            textarea.translation-definition {
+                border: 0;
+                outline: 0;
+                resize: none;
+                width: 100%;
+                padding: 15px;
+            }
+
         </style>
         <script type="text/javascript"
             data-main="/bundles/accardoutcomes/js/main"
@@ -147,14 +161,16 @@
         </script>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
+            <!--
             <div class="row">
                 <div class="col-md-12">
                     <header id="header"></header>
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="row">
+        -->
+            <div class="row-fluid">
                 <div class="col-md-12">
                     <div id="content">
                         <div id="targets-container" class="section-container"></div>
