--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/update.html.twig
@@ -27,7 +27,7 @@
         <form action="{{ updatePath }}" method="post" {{ form_enctype(form) }}>
             <input type="hidden" name="_method" value="PUT">
             {{ form_widget(form._token) }}
-            {% include ["Theme:Frontend/Activity:#{prototype}-form.html.twig", "AccardWebBundle:Frontend/Activity:form.html.twig"] %}
+            {% include ["Theme:Frontend/Activity:#{prototype}-form.html.twig", "Theme:Frontend/Activity:form.html.twig"] %}
             <div class="row">
                 <div class="col-md-12">
                     <span class="pull-right">{{ update() }}</span>
