--- a/src/Bundle/WebBundle/Resources/views/Frontend/Attribute/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Attribute/update.html.twig
@@ -25,7 +25,7 @@
             <input type="hidden" name="_method" value="PUT">
             {{ form_widget(form._token) }}
 
-            {% include ['Theme:Frontend/Activity:#{prototype}-form.html.twig', 'Theme:Frontend/Attribute:form.html.twig'] %}
+            {% include ['Theme:Frontend/Attribute:#{prototype}-form.html.twig', 'Theme:Frontend/Attribute:form.html.twig'] %}
 
             <div class="row">
                 <div class="col-md-12">
