--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -140,6 +140,12 @@
                 background-color: #fcf8e3;
             }
 
+            .state-inactive .modal,
+            .state-active .modal,
+            .state-disabled .modal {
+                color: #333;
+            }
+
             input.translation-key {
                 background: transparent;
                 border: 0;
@@ -154,34 +160,59 @@
                 padding: 15px;
             }
 
+            .row-no-top-margin {
+                margin-top: -20px;
+            }
+
+            .row-no-bottom-margin {
+                margin-bottom: -20px;
+            }
+
+            .row-2-col-with-line .col-left,
+            .row-2-col-with-line .col-right {
+                padding-bottom: 25px;
+                height: 100%;
+            }
+
+            .row-2-col-with-line .col-inner {
+                height: 100%;
+            }
+
+            .row-2-col-with-line .col-left {
+                padding-right: 30px;
+                -webkit-box-shadow: inset -10px 0px 30px -10px rgba(0,0,0,0.2);
+                   -moz-box-shadow: inset -10px 0px 30px -10px rgba(0,0,0,0.2);
+                        box-shadow: inset -10px 0px 30px -10px rgba(0,0,0,0.2);
+            }
+
+            .row-2-col-with-line .col-right {
+                padding-left: 30px;
+                -webkit-box-shadow: inset 10px 0px 30px -10px rgba(0,0,0,0.2);
+                   -moz-box-shadow: inset 10px 0px 30px -10px rgba(0,0,0,0.2);
+                        box-shadow: inset 10px 0px 30px -10px rgba(0,0,0,0.2);
+            }
+
         </style>
         <script type="text/javascript"
-            data-main="/bundles/accardoutcomes/js/main"
+            data-main="/bundles/accardoutcomes/js/modules/outcomes/main"
             src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js">
         </script>
     </head>
     <body>
+        <div id="container"></div>
+    </body>
+
+    <script id="main-template" type="text/template">
         <div class="container-fluid">
-            <!--
-            <div class="row">
-                <div class="col-md-12">
-                    <header id="header"></header>
-                </div>
-            </div>
-            <div class="clearfix"></div>
-        -->
             <div class="row-fluid">
                 <div class="col-md-12">
-                    <div id="content">
-                        <div id="targets-container" class="section-container"></div>
-                        <div id="filters-container" class="section-container"></div>
-                        <div id="translations-container" class="section-container"></div>
-                        <div id="export-container" class="section-container"></div>
+                    <div id="main" class="section-container">
+                        <div id="main-container" class="section-container"></div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
             </div>
             <div class="clearfix"></div>
         </div>
-    </body>
+    </script>
 </html>
