--- a/src/Bundle/WebBundle/Resources/views/forms.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/forms.html.twig
@@ -5,7 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'MopaBootstrapBundle:Form:fields.html.twig' %}
+{% extends 'bootstrap_3_layout.html.twig' %}
 
 {% block typeahead_widget %}
     {% set attr = attr|merge({
