--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/update.html.twig
@@ -30,7 +30,7 @@
         <input type="hidden" name="_method" value="PUT">
         {{ form_widget(form._token) }}
 
-        {% include ['Theme:Frontend/Regimen:#{prototype}-form.html.twig','Theme:Frontend/Regimen:form.html.twig'] %}
+        {% include ["Theme:Frontend/Regimen:#{prototype}-form.html.twig","Theme:Frontend/Regimen:form.html.twig"] %}
 
         <div class="row">
             <div class="col-md-12">
@@ -143,5 +143,5 @@ $(function() {
 });
 </script>
 
-    {% include 'Theme:Frontend/Regimen:#{prototype}-javascript.js.twig' ignore missing %}
+    {% include "Theme:Frontend/Regimen:#{prototype}-javascript.js.twig" ignore missing %}
 {% endblock %}
