--- a/src/Bundle/UIBundle/Resources/assets/less/default-theme.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/default-theme.less
@@ -165,6 +165,9 @@
 //## For each of Bootstrap's buttons, define text, background and border color.
 
 @btn-font-weight:                normal;
+@btn-border-radius-base:         0;
+@btn-border-radius-large:        0;
+@btn-border-radius-small:        0;
 
 @btn-default-color:              #fff;
 @btn-default-bg:                 @gray-darker;
