--- a/src/Bundle/UIBundle/Resources/views/Frontend/Patient/regimens.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Patient/regimens.html.twig
@@ -12,12 +12,13 @@
         <th class="regimen-end-date">{{ 'accard.regimen.form.end_date'|trans }}</th>
         <th class="prototype">{{ 'accard.regimen.form.prototype'|trans }}</th>
         <th class="description">{{ 'accard.regimen.form.description'|trans }}</th>
+        <th class="activities">{{ 'accard.regimen.form.activities'|trans }}</th>
         <th class="actions">{{ selector }}</th>
       </tr>
     </thead>
     <tbody data-accard="prototypes" style="display: none">
       <tr>
-        <th class="text-center" colspan="5">
+        <th class="text-center" colspan="6">
           <div class="btn-group" data-toggle="buttons">
           {% for prototype in prototypes %}
             <label class="btn btn-primary">
@@ -35,6 +36,7 @@
         <td class="regimen-end-date">{{ regimen.endDate ? regimen.endDate|localizeddate('medium', 'none') : 'accard.ongoing'|trans }}</td>
         <td class="prototype">{{ regimen.prototype.presentation }}</td>
         <td class="description">{{ regimen.description }}</td>
+        <td class="activities">{{ regimen.activities|length }}</td>
         <td class="actions">
           <div class="pull-right">
             {{ edit_in_modal(path('accard_frontend_regimen_update', { patient: regimen.patient.id, id: regimen.id }), null, 'xs') }}
