Turned off front-end debugging so repository defaults to not doing so.

--- a/src/Bundle/UIBundle/Resources/views/Frontend/main.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/main.html.twig
@@ -44,7 +44,7 @@
       },
       inspector: { initialize: true },
       grid: { initialize: true },
-      debug: true
+      debug: false
     };
   </script>
   <script type="text/javascript" src="{{ asset('bundles/accardui/js/accard.js') }}"></script>
