--- a/src/Bundle/UIBundle/Resources/views/Frontend/Sample/form.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Sample/form.html.twig
@@ -2,8 +2,8 @@
 
 <div class="row">
   <div class="col-md-6">
-    {% if attribute is defined and attribute and attribute.patient %}
-      {{ static(attribute.patient.fullName, 'accard.patient.entity_name'|trans) }}
+    {% if sample is defined and sample and sample.patient %}
+      {{ static(sample.patient.fullName, 'accard.patient.entity_name'|trans) }}
     {% endif %}
     {{ form_row(form.amount) }}
   </div>
