[UIBundle] Enabled common datepicker on all browsers not supporting native pickers.

--- a/src/Bundle/UIBundle/Resources/assets/less/accard.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/accard.less
@@ -67,6 +67,7 @@
 //@import "@{nodePath}/bootstrap3-dialog/src/less/bootstrap-dialog";
 @import "animate";
 @import "fixed-data-table";
+@import "datepicker/bootstrap-datepicker3.less";
 
 /**
  * Components.
