--- a/src/Bundle/UIBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/layout.html.twig
@@ -22,6 +22,7 @@
     }
     window.isAccardReady = isAccardReady;
   </script>
+  <script type="text/javascript" src="{{ asset('bundles/accardui/js/modernizr.min.js') }}"></script>
 </head>
 <body class="inner-content">
 
@@ -45,6 +46,7 @@
 {% block javascripts %}
   <script src="{{ asset('bundles/accardui/js/jquery.min.js') }}"></script>
   <script src="{{ asset('bundles/accardui/js/bootstrap.min.js') }}"></script>
+  <script src="{{ asset('bundles/accardui/js/datepicker/js/bootstrap-datepicker.min.js') }}"></script>
   <script src="{{ asset('bundles/accardui/js/utils.js') }}"></script>
   <script src="{{ asset('bundles/accardui/js/platform.js') }}"></script>
   <script src="{{ asset('bundles/accardui/js/forms.js') }}"></script>
