[OutcomesBundle] Fixed frontend homepage link in outcomes main page.

--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -201,7 +201,7 @@
             });
 
             require(["modules/outcomes/main"], function(main) {
-                var rootUrl = "{{ path("accard_frontend_homepage") }}";
+                var rootUrl = "{{ path("accard_frontend") }}";
                 var options = {
                     rootUrl: rootUrl,
                     stateUrl: rootUrl + "outcomes/state.json",
