--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -15,18 +15,10 @@
         <style>
             html, body { width: 100%; height: 100%; }
             body {
-                padding-top: 20px;
-                background: url("{{ background }}") no-repeat center center fixed;
-                filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ background }}, sizingMethod='scale');
-                -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{ background }}', sizingMethod='scale')";
+                background-color: transparent;
             }
 
             .section-container {
-                background: #fff;
-                padding: 2% 4%;
-                border-radius: 10px;
-                margin-bottom: 20px;
-
                 display: block;
                 width: 100%;
                 position: absolute;
@@ -35,10 +27,6 @@
                 visibility: hidden;
 
                 -webkit-backface-visibility: hidden;
-
-                -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.9);
-                   -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.9);
-                        box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.9);
             }
 
             .section-container.animated {
