--- a/src/Bundle/WebBundle/Resources/views/Backend/Option/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Option/form.html.twig
@@ -10,11 +10,14 @@
 {% macro option_value_form(option_value) %}
 
 <div class="row lockable">
-    <div class="col-sm-10">
+    <div class="col-sm-8">
         {{ form_widget(option_value.value) }}
     </div>
+    <div class="col-sm-2">
+      {{ form_widget(option_value.order) }}
+    </div>
     <div class="lock col-sm-2">
-        {{ form_widget(option_value.locked, { label_render: false }) }}
+        {{ form_widget(option_value.locked, { label: false }) }}
     </div>
 </div>
 
@@ -24,7 +27,7 @@
 {{ form_widget(form._token) }}
 
 <div class="row">
-    <div class="col-md-8 row-split">
+    <div class="col-md-6 row-split">
         {% if form.vars.value.id is null %}
             {{ form_row(form.presentation, { widget_addon_append: { icon: 'remove'}}) }}
         {% else %}
@@ -32,7 +35,7 @@
         {% endif %}
         {{ form_row(form.name) }}
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div id="option-values" data-prototype="{{ _self.option_value_form(form.values.vars.prototype)|e }}">
             {% for valueForm in form.values %}
                 {{ _self.option_value_form(valueForm) }}
