[FieldBundle] Enabled selection of ordering of choice fields.

--- a/src/Bundle/WebBundle/Resources/views/Common/Form/fieldCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Common/Form/fieldCreate.html.twig
@@ -48,6 +48,7 @@
             <div id="option-hider">
                 {{ form_row(form.option) }}
                 <span class="pull-right">
+                    {{ form_widget(form.order) }}
                     {{ form_widget(form.allowMultiple) }}
                     {{ form_widget(form.addable) }}
                 </span>
