[UIBundle] Alerts now only occupy 90% width when within a modal.

--- a/src/Bundle/UIBundle/Resources/assets/less/accard.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/accard.less
@@ -73,6 +73,7 @@
  * Components.
  */
 @import "custom";
+@import "components/alerts";
 @import "components/buttons";
 @import "components/drawer";
 @import "components/inspector";
