--- a/src/Bundle/UIBundle/Resources/assets/less/custom.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/custom.less
@@ -189,8 +189,8 @@ form[data-accard="formdelete"], form[data-accard="formmodal"] {
 .iframe-buttons {
   float: right;
   position: absolute;
-  top: @padding-large-vertical;
-  right: @padding-large-horizontal;
+  top: @modal-inner-padding - 3px;
+  right: @modal-inner-padding - 3px;
   z-index: (@zindex-modal + 10);
   margin: @padding-small-vertical @padding-small-horizontal;
 
