--- a/src/Bundle/UIBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/layout.html.twig
@@ -29,10 +29,11 @@
 {% block flashes -%}
   {%- for type in ['success', 'warning', 'error'] -%}
     {%- for flash in app.session.flashbag.get(type) -%}
-    <div class="alert alert-{{ type == 'error' ? 'danger' : type == 'notice' ? 'warning' : type }}">
+    <div class="alert alert-accard-main alert-{{ type == 'error' ? 'danger' : type == 'notice' ? 'warning' : type }}">
       <a class="close" data-dismiss="alert" href="#">×</a>
       {{ flash|trans }}
     </div>
+    <div class="clearfix"></div>
     {%- endfor -%}
   {%- endfor -%}
 {%- endblock %}
