--- a/src/Bundle/UIBundle/Resources/views/Frontend/Diagnosis/create.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Diagnosis/create.html.twig
@@ -36,13 +36,16 @@
         var manager = new formClass('form');
         var addPhase = $('#add-phase').hide();
 
-        $('a[data-toggle="tab"]').on('shown.bs.tab', function(event) {
-            if (event.target.href.indexOf('diagnosis-phase') != -1) {
-                addPhase.fadeIn();
-            } else {
-                addPhase.fadeOut();
-            }
-        });
+        function showPhaseButton(){
+          if (window.location.hash.indexOf('diagnosis-phases') != -1) {
+              addPhase.fadeIn();
+          } else {
+              addPhase.fadeOut();
+          }
+        }
+
+        $('a[data-toggle="tab"]').on('shown.bs.tab', showPhaseButton);
+        showPhaseButton();
 
         function makeToday() {
             var now = new Date();
@@ -53,16 +56,17 @@
         }
 
         manager
-            //.plugin("pds", "#pds")
             .collection("#phases", {
                 adder: addPhase,
                 startup: function(collection) {
                     var field = $(this).find('input[type="date"]').first();
+                    var self = $(this);
 
                     if (!field.val()) field.val(makeToday());
-                    $(this).on('click', '.input-group-addon', function(event) {
-                        var prev = $(this).prev();
-                        $(prev).val(makeToday());
+
+                    $(this).on('click', '[data-accard=delete-prototype]', function(event) {
+                      console.log(self);
+                      self.detach();
                     });
                 }
             })
