--- a/src/Bundle/UIBundle/Resources/views/Frontend/Behavior/form.html.twig
+++ b/src/Bundle/UIBundle/Resources/views/Frontend/Behavior/form.html.twig
@@ -2,8 +2,8 @@
 
 <div class="row">
   <div class="col-md-6">
-    {% if attribute is defined and attribute and attribute.patient %}
-      {{ static(attribute.patient.fullName, 'accard.patient.entity_name'|trans) }}
+    {% if behavior is defined and behavior and behavior.patient %}
+      {{ static(behavior.patient.fullName, 'accard.patient.entity_name'|trans) }}
     {% endif %}
     {{ form_row(form.startDate) }}
     {{ form_row(form.endDate) }}
