[UIBundle] Required control labels marked with CSS3 red asterisk.

--- a/src/Bundle/UIBundle/Resources/assets/less/custom.less
+++ b/src/Bundle/UIBundle/Resources/assets/less/custom.less
@@ -205,3 +205,8 @@ form[data-accard="formdelete"], form[data-accard="formmodal"] {
   }
 }
 
+.control-label.required:after { 
+   content:"*";
+   color: rgba(249, 56, 34, 0.8);
+}
+
